--- a/pinyin/package.json
+++ b/pinyin/package.json
@@ -27,6 +27,10 @@
     "chai": "^4.1.2",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "pre-commit": "^1.2.2",
     "vue-template-compiler": "^2.6.10"
-  }
+  },
+  "pre-commit": [
+    "test:unit"
+  ]
 }
