--- a/pinyin/package.json
+++ b/pinyin/package.json
@@ -36,7 +36,7 @@
  },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged && npm run test:unit"
+      "pre-commit": "lint-staged && n run test:unit"
     }
   }
 }
