--- a/pinyin/package.json
+++ b/pinyin/package.json
@@ -31,8 +31,8 @@
     "vue-template-compiler": "^2.6.10"
   },
   "lint-staged": {
-    "*.js": [ "lint", "test:unit" ],
-     "*.vue": [ "lint", "test:unit" ]
+    "*.js": [ "lint", "npm run test:unit" ],
+     "*.vue": [ "lint", "npm run test:unit" ]
  },
   "husky": {
     "hooks": {
