change the spec from firebase functions to gas

--- a/pinyin/.env
+++ b/pinyin/.env
@@ -1,1 +1,1 @@
-VUE_APP_SERVER_API_URL="https://us-central1-test-f07cb.cloudfunctions.net/helloWorld"
+VUE_APP_SERVER_TRANSLATION="https://script.google.com/macros/s/AKfycbxsv3ve42fTewiSXGvRK3uUJ_PFnUlSlnqKA182__g/dev"
