--- a/pinyin/package.json
+++ b/pinyin/package.json
@@ -9,12 +9,10 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
-    "axios": "^0.19.2",
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
-    "vuex": "^3.0.1",
-    "webpack": "^4.43.0"
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.10.0",
@@ -32,5 +30,10 @@
     "husky": "^3.0.5",
     "vue-jsonp": "^0.1.8",
     "vue-template-compiler": "^2.6.10"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run test:unit"
+    }
   }
 }
